Fix an issue, unwanted scrollbar in of Document Explorer tab.

--- a/com.logilite.dmstheme/css/dms.css
+++ b/com.logilite.dmstheme/css/dms.css
@@ -54,3 +54,7 @@
 	display: table-cell;
 	vertical-align: middle;
 }
+
+.SB-Grid .z-grid-body {
+	height: 100%;
+}
